// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`enzyme test render component with mount 1`] = `
.emotion-0 {
  background-color: red;
}

.emotion-0 {
  background-color: red;
}

<Greeting>
  <div
    className="emotion-0"
  >
    hello
  </div>
</Greeting>
`;

exports[`enzyme test render component with shallow 1`] = `
<div
  className=""
  css="unknown styles"
>
  hello
</div>
`;

exports[`enzyme test with prop containing css element in fragment 1`] = `
.emotion-0 {
  background-color: blue;
}

.emotion-0 {
  background-color: blue;
}

<div>
  Array [
    "x",
    <div
      className="emotion-0"
    >
      y
    </div>,
  ]
</div>
`;

exports[`enzyme test with prop containing css element not at the top level render component with mount 1`] = `
.emotion-0 {
  background-color: blue;
}

.emotion-0 {
  background-color: blue;
}

<div>
  <Greeting
    content={
      <p
        css="unknown styles"
        id="something"
      >
        Hello
      </p>
    }
  >
    <div>
      <p
        className="emotion-0"
        id="something"
      >
        Hello
      </p>
       
      World!
    </div>
  </Greeting>
</div>
`;

exports[`enzyme test with prop containing css element not at the top level render component with shallow 1`] = `
<div>
  <Greeting
    content={
      <p
        css="unknown styles"
        id="something"
      >
        Hello
      </p>
    }
  >
    World!
  </Greeting>
</div>
`;

exports[`enzyme test with prop containing css element render component with mount 1`] = `
.emotion-0 {
  background-color: blue;
}

.emotion-0 {
  background-color: blue;
}

<Greeting
  content={
    <p
      css="unknown styles"
    >
      Hello
    </p>
  }
>
  <div>
    <p
      className="emotion-0"
    >
      Hello
    </p>
     
    World!
  </div>
</Greeting>
`;

exports[`enzyme test with prop containing css element render component with shallow 1`] = `
<div>
  <p
    className="emotion-0"
    css="unknown styles"
  >
    Hello
  </p>
   
  World!
</div>
`;

exports[`enzyme test with prop containing css element with other label render component with mount 1`] = `
.emotion-0 {
  background-color: blue;
}

.emotion-0 {
  background-color: blue;
}

<Greeting
  content={
    <p
      css="unknown styles"
      id="something"
    >
      Hello
    </p>
  }
>
  <Thing
    content={
      <div
        css="unknown styles"
      />
    }
  >
    <p
      className="emotion-0"
      id="something"
    >
      Hello
    </p>
     
    World!
  </Thing>
</Greeting>
`;

exports[`enzyme test with prop containing css element with other label render component with shallow 1`] = `
<Thing
  content={
    <div
      css="unknown styles"
    />
  }
>
  .emotion-0 {
  background-color: blue;
}

.emotion-0 {
  background-color: blue;
}

<p
    className="emotion-0"
    css="unknown styles"
    id="something"
  >
    Hello
  </p>
   
  World!
</Thing>
`;

exports[`enzyme test with prop containing css element with other props render component with mount 1`] = `
.emotion-0 {
  background-color: blue;
}

.emotion-0 {
  background-color: blue;
}

<Greeting
  content={
    <p
      css="unknown styles"
      id="something"
    >
      Hello
    </p>
  }
>
  <div>
    <p
      className="emotion-0"
      id="something"
    >
      Hello
    </p>
     
    World!
  </div>
</Greeting>
`;

exports[`enzyme test with prop containing css element with other props render component with shallow 1`] = `
<div>
  .emotion-0 {
  background-color: blue;
}

.emotion-0 {
  background-color: blue;
}

<p
    className="emotion-0"
    css="unknown styles"
    id="something"
  >
    Hello
  </p>
   
  World!
</div>
`;
